--- a/components/gcp/ml_engine/batch_predict/component.yaml
+++ b/components/gcp/ml_engine/batch_predict/component.yaml
@@ -69,7 +69,7 @@ outputs:
     type: UI metadata
 implementation:
   container:
-    image: gcr.io/ml-pipeline/ml-pipeline-gcp:ddd1969b3453fdeb4c400e7e757a3e15f4acb480
+    image: gcr.io/ml-pipeline/ml-pipeline-gcp:1.0.0-test-1
     args: [
       --ui_metadata_path, {outputPath: MLPipeline UI metadata},
       kfp_component.google.ml_engine, batch_predict,
