--- a/components/kubeflow/deployer/component.yaml
+++ b/components/kubeflow/deployer/component.yaml
@@ -11,7 +11,7 @@ inputs:
 #  - {name: Endppoint URI, type: Serving URI,                      description: 'URI of the deployed prediction service..'}
 implementation:
   container:
-    image: gcr.io/ml-pipeline/ml-pipeline-kubeflow-deployer:ddd1969b3453fdeb4c400e7e757a3e15f4acb480
+    image: gcr.io/ml-pipeline/ml-pipeline-kubeflow-deployer:1.0.0-test-1
     command: [/bin/deploy.sh]
     args: [
       --model-export-path,  {inputValue: Model dir},
