--- a/components/local/roc/component.yaml
+++ b/components/local/roc/component.yaml
@@ -11,7 +11,7 @@ outputs:
   - {name: MLPipeline Metrics,     type: Metrics}
 implementation:
   container:
-    image: gcr.io/ml-pipeline/ml-pipeline-local-confusion-matrix:ddd1969b3453fdeb4c400e7e757a3e15f4acb480
+    image: gcr.io/ml-pipeline/ml-pipeline-local-confusion-matrix:1.0.0-test-1
     command: [python2, /ml/roc.py]
     args: [
       --predictions,        {inputValue: Predictions dir},
